--- a/apps/party-time-backend/src/main/resources/mail/verify_account.mustache
+++ b/apps/party-time-backend/src/main/resources/mail/verify_account.mustache
@@ -1,236 +1,179 @@
 <!DOCTYPE html>
 <html>
-<head>
 
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Email Confirmation</title>
+<head>
+  <title></title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <style type="text/css">
-    /**
-     * Google webfonts. Recommended to include the .woff version for cross-client compatibility.
-     */
     @media screen {
       @font-face {
-        font-family: 'Source Sans Pro';
+        font-family: 'Lato';
         font-style: normal;
         font-weight: 400;
-        src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/ODelI1aHBYDBqgeIAH2zlBM0YzuT7MdOe03otPbuUS0.woff) format('woff');
+        src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v11/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
       }
+
       @font-face {
-        font-family: 'Source Sans Pro';
+        font-family: 'Lato';
         font-style: normal;
         font-weight: 700;
-        src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/toadOcfmlt9b38dHJxOBGFkQc6VGVFSmCnC_l7QZG60.woff) format('woff');
+        src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v11/qdgUG4U09HnJwhYI-uK18wLUuEpTyoUstqEm5AMlJo4.woff) format('woff');
+      }
+
+      @font-face {
+        font-family: 'Lato';
+        font-style: italic;
+        font-weight: 400;
+        src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v11/RYyZNoeFgb0l7W3Vu1aSWOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
+      }
+
+      @font-face {
+        font-family: 'Lato';
+        font-style: italic;
+        font-weight: 700;
+        src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v11/HkF_qI1x_noxlxhrhMQYELO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
       }
     }
-    /**
-     * Avoid browser level font resizing.
-     * 1. Windows Mobile
-     * 2. iOS / OSX
-     */
+
+    /* CLIENT-SPECIFIC STYLES */
     body,
     table,
     td,
     a {
-      -ms-text-size-adjust: 100%; /* 1 */
-      -webkit-text-size-adjust: 100%; /* 2 */
+      -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
     }
-    /**
-     * Remove extra space added to tables and cells in Outlook.
-     */
+
     table,
     td {
-      mso-table-rspace: 0pt;
       mso-table-lspace: 0pt;
+      mso-table-rspace: 0pt;
     }
-    /**
-     * Better fluid images in Internet Explorer.
-     */
+
     img {
       -ms-interpolation-mode: bicubic;
     }
-    /**
-     * Remove blue links for iOS devices.
-     */
-    a[x-apple-data-detectors] {
-      font-family: inherit !important;
-      font-size: inherit !important;
-      font-weight: inherit !important;
-      line-height: inherit !important;
-      color: inherit !important;
-      text-decoration: none !important;
+
+    /* RESET STYLES */
+    img {
+      border: 0;
+      height: auto;
+      line-height: 100%;
+      outline: none;
+      text-decoration: none;
     }
-    /**
-     * Fix centering issues in Android 4.4.
-     */
-    div[style*="margin: 16px 0;"] {
-      margin: 0 !important;
-    }
-    body {
-      width: 100% !important;
-      height: 100% !important;
-      padding: 0 !important;
-      margin: 0 !important;
-    }
-    /**
-     * Collapse table borders to avoid space between cells.
-     */
+
     table {
       border-collapse: collapse !important;
     }
-    a {
-      color: #1a82e2;
+
+    body {
+      height: 100% !important;
+      margin: 0 !important;
+      padding: 0 !important;
+      width: 100% !important;
     }
-    img {
-      height: auto;
-      line-height: 100%;
-      text-decoration: none;
-      border: 0;
-      outline: none;
+
+    /* iOS BLUE LINKS */
+    a[x-apple-data-detectors] {
+      color: inherit !important;
+      text-decoration: none !important;
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+    }
+
+    /* MOBILE STYLES */
+    @media screen and (max-width:600px) {
+      h1 {
+        font-size: 32px !important;
+        line-height: 32px !important;
+      }
+    }
+
+    /* ANDROID CENTER FIX */
+    div[style*="margin: 16px 0;"] {
+      margin: 0 !important;
     }
   </style>
-
 </head>
-<body style="background-color: #e9ecef;">
 
-<!-- start preheader -->
-<div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-  A preheader is the short summary text that follows the subject line when an email is viewed in the inbox.
+<body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;">
+<!-- HIDDEN PREHEADER TEXT -->
+<div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;"> We're thrilled to have you here! Get ready to dive into your new account.
 </div>
-<!-- end preheader -->
-
-<!-- start body -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
-
-  <!-- start hero -->
+  <!-- LOGO -->
   <tr>
-    <td align="center" bgcolor="#e9ecef">
-      <!--[if (gte mso 9)|(IE)]>
-      <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
-        <tr>
-          <td align="center" valign="top" width="600">
-      <![endif]-->
+    <td bgcolor="#FFA73B" align="center">
       <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
         <tr>
-          <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-            <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Hi, {{name}}</h1>
-          </td>
+          <td align="center" valign="top" style="padding: 40px 10px 40px 10px;"> </td>
         </tr>
       </table>
-      <!--[if (gte mso 9)|(IE)]>
-      </td>
-      </tr>
-      </table>
-      <![endif]-->
     </td>
   </tr>
-  <!-- end hero -->
-
-  <!-- start copy block -->
   <tr>
-    <td align="center" bgcolor="#e9ecef">
-      <!--[if (gte mso 9)|(IE)]>
-      <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
-        <tr>
-          <td align="center" valign="top" width="600">
-      <![endif]-->
+    <td bgcolor="#FFA73B" align="center" style="padding: 0px 10px 0px 10px;">
       <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-
-        <!-- start copy -->
         <tr>
-          <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-            <p style="margin: 0;">Tap the button below to confirm your email address.</p>
+          <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
+            <h1 style="font-size: 48px; font-weight: 400; margin: 2;">Welcome {{name}}!</h1> <img src=" https://img.icons8.com/clouds/100/000000/handshake.png" width="125" height="120" style="display: block; border: 0px;" />
           </td>
         </tr>
-        <!-- end copy -->
-
-        <!-- start button -->
+      </table>
+    </td>
+  </tr>
+  <tr>
+    <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
         <tr>
-          <td align="left" bgcolor="#ffffff">
-            <table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+            <p style="margin: 0;">We're excited to have you get started. First, you need to confirm your account. Just press the button below.</p>
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#ffffff" align="left">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td align="center" bgcolor="#ffffff" style="padding: 12px;">
-                  <table border="0" cellpadding="0" cellspacing="0">
+                <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
+                  <table border="0" cellspacing="0" cellpadding="0">
                     <tr>
-                      <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                        <a href="{{verificationLink}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Verify Email Address</a>
-                      </td>
+                      <td align="center" style="border-radius: 3px;" bgcolor="#FFA73B"><a href="{{verificationLink}}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #FFA73B; display: inline-block;">Confirm Account</a></td>
                     </tr>
                   </table>
                 </td>
               </tr>
             </table>
           </td>
-        </tr>
-        <!-- end button -->
-
-        <!-- start copy -->
+        </tr> <!-- COPY -->
         <tr>
-          <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+          <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
             <p style="margin: 0;">If that doesn't work, copy and paste the following link in your browser:</p>
-            <p style="margin: 0;"><a href="{{verificationLink}}" target="_blank">{{verificationLink}}</a></p>
           </td>
-        </tr>
-        <!-- end copy -->
-
-        <!-- start copy -->
+        </tr> <!-- COPY -->
         <tr>
-          <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-            <p style="margin: 0;">Cheers,<br> Paste</p>
+          <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+            <p style="margin: 0;"><a href="{{verificationLink}}" target="_blank" style="color: #FFA73B;">{{verificationLink}}</a></p>
           </td>
         </tr>
-        <!-- end copy -->
-
+        <tr>
+          <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+            <p style="margin: 0;">If you have any questions, just reply to this email&mdash;we're always happy to help out.</p>
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+            <p style="margin: 0;">Cheers,<br>Party Time Team</p>
+          </td>
+        </tr>
       </table>
-      <!--[if (gte mso 9)|(IE)]>
-      </td>
-      </tr>
-      </table>
-      <![endif]-->
     </td>
   </tr>
-  <!-- end copy block -->
-
-  <!-- start footer -->
-  <tr>
-    <td align="center" bgcolor="#e9ecef" style="padding: 24px;">
-      <!--[if (gte mso 9)|(IE)]>
-      <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
-        <tr>
-          <td align="center" valign="top" width="600">
-      <![endif]-->
-      <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-
-        <!-- start permission -->
-        <tr>
-          <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-            <p style="margin: 0;">You received this email because we received a request for [type_of_action] for your account. If you didn't request [type_of_action] you can safely delete this email.</p>
-          </td>
-        </tr>
-        <!-- end permission -->
-
-        <!-- start unsubscribe -->
-        <tr>
-          <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-            <p style="margin: 0;">To stop receiving these emails, you can <a href="https://www.blogdesire.com" target="_blank">unsubscribe</a> at any time.</p>
-            <p style="margin: 0;">Paste 1234 S. Broadway St. City, State 12345</p>
-          </td>
-        </tr>
-        <!-- end unsubscribe -->
-
-      </table>
-      <!--[if (gte mso 9)|(IE)]>
-      </td>
-      </tr>
-      </table>
-      <![endif]-->
-    </td>
-  </tr>
-  <!-- end footer -->
-
 </table>
-<!-- end body -->
-
 </body>
+
 </html>
