--- a/doc/plantStyle.css
+++ b/doc/plantStyle.css
@@ -1,5 +1,5 @@
 activityDiagram {
-    activity {
-        BackgroundColor: lightblue;
-    }
+  activity {
+    backgroundcolor: lightblue;
+  }
 }
