--- a/apps/party-time-backend/src/main/resources/mail/verify_account.mustache
+++ b/apps/party-time-backend/src/main/resources/mail/verify_account.mustache
@@ -44,12 +44,10 @@
 <body>
 <h1>Account erfolgreich angelegt!</h1>
 <p>Hallo {{name}},</p>
-<p>Vielen Dank für die Erstellung deines Accounts auf <a href="https://www.partytime.de">partytime.de</a>. Dein Account
-    wurde erfolgreich angelegt.</p>
+<p>Vielen Dank für die Erstellung deines Accounts auf <a href="https://www.partytime.de">partytime.de</a>. Dein Account wurde erfolgreich angelegt.</p>
 <p>Klicke auf den folgenden Button, um deine E-Mail-Adresse zu verifizieren:</p>
 <p><a href="{{verificationLink}}" class="btn">E-Mail-Adresse verifizieren</a></p>
-<p>Wenn du weitere Fragen hast oder Unterstützung benötigst, besuche unsere Website unter <a
-        href="https://www.partytime.de">partytime.de</a>.</p>
+<p>Wenn du weitere Fragen hast oder Unterstützung benötigst, besuche unsere Website unter <a href="https://www.partytime.de">partytime.de</a>.</p>
 <p>Beste Grüße,</p>
 <p>Dein Partytime-Team</p>
 </body>
