--- a/libs/register/src/lib/register/register.component.html
+++ b/libs/register/src/lib/register/register.component.html
@@ -3,27 +3,20 @@
     <div *ngIf="registerState.loading">
       <div class="grid h-screen place-items-center">
         <div role="status">
-          <svg
-            aria-hidden="true"
+          <svg aria-hidden="true"
             class="mr-2 inline h-8 w-8 animate-spin fill-secondary-container-light text-on-background-light dark:fill-secondary-container-dark dark:text-on-background-dark"
-            viewBox="0 0 100 101"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+            viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
-              fill="currentColor"
-            />
+              fill="currentColor" />
             <path
               d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
-              fill="currentFill"
-            />
+              fill="currentFill" />
           </svg>
-          <span class="sr-only">Loading...</span>
+          <span class="sr-only">Loading</span>
         </div>
         <p
-          class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl"
-        >
+          class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl">
           Profil wird erstellt
         </p>
       </div>
@@ -31,8 +24,7 @@
     <ng-template #error>
       <div class="grid h-screen place-items-center">
         <div
-          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
-        >
+          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
           <p class="">Hey!</p>
           <p>Dein Account konnte leider nicht erstellt werden</p>
           <p>Status: {{ registerState.error?.status }}</p>
@@ -41,10 +33,8 @@
             <p class="text-error-light dark:text-error-dark">
               {{ registerState.error?.message }}
             </p>
-            <li
-              class="text-error-light dark:text-error-dark"
-              *ngFor="let error of registerState.error?.additionalInformation"
-            >
+            <li class="text-error-light dark:text-error-dark"
+              *ngFor="let error of registerState.error?.additionalInformation">
               {{ error['name'] }} {{ error['message'] }}
             </li>
           </div>
@@ -54,11 +44,9 @@
     <div *ngIf="registerState.registerd; else error">
       <div class="grid h-screen place-items-center">
         <div
-          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
-        >
+          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
           <p
-            class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark"
-          >
+            class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark">
             Hey {{ registerState.accountDTO?.name }}!
           </p>
           <p>Dein Account wurde erstellt</p>
@@ -70,73 +58,46 @@
       </div>
     </div>
   </ng-template>
-  <div
-    *ngIf="
+  <div *ngIf="
       !registerState.registerd &&
         !registerState.loading &&
         !registerState.error;
       else registerdone
-    "
-  >
+    ">
     <h1
-      class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl"
-    >
+      class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl">
       Profil erstellen
     </h1>
     <form class="" [formGroup]="registerForm">
       <div class="flex justify-center pl-12 pr-12 pt-12">
         <div class="w-96">
           <section>
-            <label
-              for="benutzername"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
-            >
-              Benutzername</label
-            >
+            <label for="benutzername"
+              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
+              Benutzername</label>
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
-            >
-              <input
-                type="text"
-                name="name"
-                minlength="4"
-                id="name"
-                autocomplete="name"
-                required
-                formControlName="name"
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+              <input type="text" name="name" minlength="4" id="name" autocomplete="name" required formControlName="name"
                 class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-                placeholder="z. B. Manfred"
-                [value]="accountRegisterDTO.name"
-              />
+                placeholder="z. B. Manfred" [value]="accountRegisterDTO.name" />
             </div>
-            <div
-              *ngIf="f['name'].errors && (f['name'].dirty || f['name'].touched)"
-            >
+            <div *ngIf="f['name'].errors && (f['name'].dirty || f['name'].touched)">
               <div *ngIf="f['name'].errors['required']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     Bitte gib einen Benutzernamen ein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['name'].errors['minlength']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     Der Benutzername muss mindestens 5 Zeichen lang sein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['name'].errors['maxlength']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     Der Benutzernamen darf maximal 20 Zeichen lang sein.
                   </div>
@@ -145,36 +106,20 @@
             </div>
           </section>
           <section>
-            <label
-              for=" email"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
-            >
-              E-Mail</label
-            >
+            <label for=" email"
+              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
+              E-Mail</label>
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
-            >
-              <input
-                type="email"
-                name="email"
-                id="email"
-                autocomplete="email"
-                required
-                formControlName="email"
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+              <input type="email" name="email" id="email" autocomplete="email" required formControlName="email"
                 class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-                placeholder="z. B. manfred@partytime.com"
-              />
+                placeholder="z. B. manfred@partytime.com" />
             </div>
-            <div
-              *ngIf="
+            <div *ngIf="
                 f['email'].errors && (f['email'].dirty || f['email'].touched)
-              "
-            >
+              ">
               <div *ngIf="f['email'].errors['required']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     Bitte gib deine E-Mail Adresse ein damit wir verifzieren
                     können dass du eine echte Person bist und du zur Not dein
@@ -183,10 +128,7 @@
                 </div>
               </div>
               <div *ngIf="f['email'].errors['email']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     Bitte gib eine Valide E-Mail Adresse ein damit wir
                     verifzieren können dass du eine echte Person bist. Es wird
@@ -197,67 +139,43 @@
             </div>
           </section>
           <section>
-            <label
-              for="password"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
-            >
-              Password</label
-            >
+            <label for="password"
+              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
+              Password</label>
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
-            >
-              <input
-                type="password"
-                name="password"
-                id="password"
-                autocomplete="new-password"
-                required
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+              <input type="password" name="password" id="password" autocomplete="new-password" required
                 formControlName="password"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-              />
+                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
             </div>
 
-            <div
-              *ngIf="
+            <div *ngIf="
                 f['password'].errors &&
                 (f['password'].dirty || f['password'].touched)
-              "
-            >
+              ">
               <div *ngIf="f['password'].errors['required']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     Bitte gib ein Passwort ein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['password'].errors['minlength']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     Das Passwort muss mindestens 8 Zeichen lang sein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['password'].errors['maxlength']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     Das Passwort darf maximal 20 Zeichen lang sein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['password'].errors['pattern']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
+                <div class="flex text-error-light dark:text-error-dark" role=" alert">
                   <div class="text-sm font-medium">
                     <ul>
                       <li>
@@ -274,12 +192,8 @@
             </div>
           </section>
           <div class="flex w-full place-content-end pt-7">
-            <party-time-primary-button
-              (clicked)="onSubmit()"
-              [disabled]="!registerForm.valid"
-              type="submit"
-              name="Regestieren"
-            ></party-time-primary-button>
+            <party-time-primary-button (clicked)="onSubmit()" [disabled]="!registerForm.valid" type="submit"
+              name="Regestieren"></party-time-primary-button>
           </div>
         </div>
       </div>
