--- a/libs/register/src/lib/register/register.component.html
+++ b/libs/register/src/lib/register/register.component.html
@@ -177,7 +177,7 @@
                   role=" alert"
                 >
                   <div class="text-sm font-medium">
-                    Bitte gib deine E-Mail Adresse ein damit wir verifzieren
+                    Bitte gib deine E-Mail Adresse ein damit wir verifizieren
                     können dass du eine echte Person bist und du zur Not dein
                     Passwort zurück setzen kannst.
                   </div>
