--- a/libs/verify/src/lib/verify/verify.component.html
+++ b/libs/verify/src/lib/verify/verify.component.html
@@ -1,1 +1,48 @@
-<p>verify works!</p>
+<section *ngIf="verifyState$ | async as verifyState">
+    <div *ngIf="!verifyState.verified &&
+                !verifyState.loading && 
+                !verifyState.error">
+
+    </div>
+    <h1
+        class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl">
+        Profil verifizieren
+    </h1>
+    <form [formGroup]="verifyForm">
+        <div class="flex justify-center pl-12 pr-12 pt-12">
+            <div class="w-96">
+                <section>
+                    <label for="token"
+                        class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
+                        Token</label>
+                    <div
+                        class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+                        <input type="text" name="token" id="token" required formControlName="token"
+                            class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
+                            placeholder="XXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXX" [value]="token" />
+                    </div>
+                    <div *ngIf="f['token'].errors && (f['token'].dirty || f['token'].touched)">
+                        <div *ngIf="f['token'].errors['required']">
+                            <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                                <div class="text-sm font-medium">
+                                    Bitte gib den Token aus der E-Mail ein.
+                                </div>
+                            </div>
+                        </div>
+                        <div *ngIf="f['token'].errors['pattern']">
+                            <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                                <div class="text-sm font-medium">
+                                    Bitte überprüfe den Token.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <div class="flex w-full place-content-end pt-7">
+                    <party-time-primary-button (clicked)="onSubmit()" [disabled]="!verifyForm.valid" type="submit"
+                        name="Verifizieren"></party-time-primary-button>
+                </div>
+            </div>
+        </div>
+    </form>
+</section>
