add tests and readme

--- a/libs/register/src/lib/register/register.component.html
+++ b/libs/register/src/lib/register/register.component.html
@@ -7,7 +7,8 @@
           <party-time-loading-circle></party-time-loading-circle>
         </div>
         <p
-          class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl">
+          class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl"
+        >
           Profil wird erstellt
         </p>
       </div>
@@ -15,7 +16,8 @@
     <ng-template #error>
       <div class="grid h-screen place-items-center">
         <div
-          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
+          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
+        >
           <p class="">Hey!</p>
           <p>Dein Account konnte leider nicht erstellt werden</p>
           <p>Status: {{ registerState.error?.status }}</p>
@@ -24,8 +26,10 @@
             <p class="text-error-light dark:text-error-dark">
               {{ registerState.error?.message }}
             </p>
-            <li class="text-error-light dark:text-error-dark"
-              *ngFor="let error of registerState.error?.additionalInformation">
+            <li
+              class="text-error-light dark:text-error-dark"
+              *ngFor="let error of registerState.error?.additionalInformation"
+            >
               {{ error['name'] }} {{ error['message'] }}
             </li>
           </div>
@@ -35,9 +39,11 @@
     <div *ngIf="registerState.registerd; else error">
       <div class="grid h-screen place-items-center">
         <div
-          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
+          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
+        >
           <p
-            class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark">
+            class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark"
+          >
             Hey {{ registerState.accountDTO?.name }}!
           </p>
           <p>Dein Account wurde erstellt</p>
@@ -49,46 +55,73 @@
       </div>
     </div>
   </ng-template>
-  <div *ngIf="
+  <div
+    *ngIf="
       !registerState.registerd &&
         !registerState.loading &&
         !registerState.error;
       else registerdone
-    ">
+    "
+  >
     <h1
-      class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl">
+      class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl"
+    >
       Profil erstellen
     </h1>
     <form class="" [formGroup]="registerForm">
       <div class="flex justify-center pl-12 pr-12 pt-12">
         <div class="w-96">
           <section>
-            <label for="benutzername"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
-              Benutzername</label>
+            <label
+              for="benutzername"
+              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
+            >
+              Benutzername</label
+            >
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
-              <input type="text" name="name" minlength="4" id="name" autocomplete="name" required formControlName="name"
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
+            >
+              <input
+                type="text"
+                name="name"
+                minlength="4"
+                id="name"
+                autocomplete="name"
+                required
+                formControlName="name"
                 class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-                placeholder="z. B. Manfred" [value]="accountRegisterDTO.name" />
+                placeholder="z. B. Manfred"
+                [value]="accountRegisterDTO.name"
+              />
             </div>
-            <div *ngIf="f['name'].errors && (f['name'].dirty || f['name'].touched)">
+            <div
+              *ngIf="f['name'].errors && (f['name'].dirty || f['name'].touched)"
+            >
               <div *ngIf="f['name'].errors['required']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     Bitte gib einen Benutzernamen ein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['name'].errors['minlength']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     Der Benutzername muss mindestens 5 Zeichen lang sein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['name'].errors['maxlength']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     Der Benutzername darf maximal 30 Zeichen lang sein.
                   </div>
@@ -97,20 +130,36 @@
             </div>
           </section>
           <section>
-            <label for=" email"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
-              E-Mail</label>
+            <label
+              for=" email"
+              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
+            >
+              E-Mail</label
+            >
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
-              <input type="email" name="email" id="email" autocomplete="email" required formControlName="email"
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
+            >
+              <input
+                type="email"
+                name="email"
+                id="email"
+                autocomplete="email"
+                required
+                formControlName="email"
                 class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-                placeholder="z. B. manfred@partytime.com" />
+                placeholder="z. B. manfred@partytime.com"
+              />
             </div>
-            <div *ngIf="
+            <div
+              *ngIf="
                 f['email'].errors && (f['email'].dirty || f['email'].touched)
-              ">
+              "
+            >
               <div *ngIf="f['email'].errors['required']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     Bitte gib deine E-Mail Adresse ein damit wir verifizieren
                     können dass du eine echte Person bist und du dein Passwort
@@ -119,7 +168,10 @@
                 </div>
               </div>
               <div *ngIf="f['email'].errors['email']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     Bitte gib eine Valide E-Mail Adresse ein damit wir
                     verifizieren können dass du eine echte Person bist. Es wird
@@ -130,43 +182,67 @@
             </div>
           </section>
           <section>
-            <label for="password"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
-              Password</label>
+            <label
+              for="password"
+              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
+            >
+              Password</label
+            >
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
-              <input type="password" name="password" id="password" autocomplete="new-password" required
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
+            >
+              <input
+                type="password"
+                name="password"
+                id="password"
+                autocomplete="new-password"
+                required
                 formControlName="password"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
+                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
+              />
             </div>
 
-            <div *ngIf="
+            <div
+              *ngIf="
                 f['password'].errors &&
                 (f['password'].dirty || f['password'].touched)
-              ">
+              "
+            >
               <div *ngIf="f['password'].errors['required']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     Bitte gib ein Passwort ein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['password'].errors['minlength']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     Das Passwort muss mindestens 8 Zeichen lang sein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['password'].errors['maxlength']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     Das Passwort darf maximal 30 Zeichen lang sein.
                   </div>
                 </div>
               </div>
               <div *ngIf="f['password'].errors['pattern']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
+                <div
+                  class="flex text-error-light dark:text-error-dark"
+                  role=" alert"
+                >
                   <div class="text-sm font-medium">
                     <ul>
                       <li>
@@ -188,8 +264,12 @@
             </div>
           </section>
           <div class="flex w-full place-content-end pt-7">
-            <party-time-primary-button (clicked)="onSubmit()" [disabled]="!registerForm.valid" type="submit"
-              name="Regestieren"></party-time-primary-button>
+            <party-time-primary-button
+              (clicked)="onSubmit()"
+              [disabled]="!registerForm.valid"
+              type="submit"
+              name="Regestieren"
+            ></party-time-primary-button>
           </div>
         </div>
       </div>
