refactor components to use component store

--- a/libs/change/src/lib/change/change.component.html
+++ b/libs/change/src/lib/change/change.component.html
@@ -1,144 +1,1 @@
-<!-- implements F013 -->
-<section *ngIf="vm$ | async as VM">
-  <ng-template #changedone>
-    <div *ngIf="VM.changeState.isLoading">
-      <div class="grid h-screen place-items-center">
-        <div role="status">
-          <party-time-loading-circle></party-time-loading-circle>
-        </div>
-        <p
-          class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl">
-          Änderung des Passworts wird durchgeführt
-        </p>
-      </div>
-    </div>
-    <ng-template #error>
-      <div class="grid h-screen place-items-center">
-        <div
-          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
-          <p class="">Hey {{VM.authState.accountLoginDTO?.name}}! </p>
-          <p>Wir konnten dein Passwort leider nicht ändern.</p>
-          <p>Status: {{ VM.changeState.error?.status }}</p>
-          <div>
-            Fehler:
-            <p class="text-error-light dark:text-error-dark">
-              {{ VM.changeState.error?.message }}
-            </p>
-            <li class="text-error-light dark:text-error-dark"
-              *ngFor="let error of VM.changeState.error?.additionalInformation">
-              {{ error['name'] }} {{ error['message'] }}
-            </li>
-          </div>
-        </div>
-      </div>
-    </ng-template>
-    <div *ngIf="VM.changeState.isPasswordChanged; else error">
-      <div class="grid h-screen place-items-center">
-        <div
-          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
-          <p
-            class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark">
-            Hey {{VM.authState.accountLoginDTO?.name}}!
-          </p>
-          <p>Du hast dein Passwort erfolgreich geändert.</p>
-        </div>
-      </div>
-    </div>
-  </ng-template>
-  <div *ngIf="
-      !VM.changeState.isLoading && !VM.changeState.isPasswordChanged;
-      else changedone">
-    <h1
-      class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl">
-      Passwort ändern
-    </h1>
-    <form class="" (ngSubmit)="(onSubmit)" [formGroup]="changeForm">
-      <div class="flex justify-center pl-12 pr-12 pt-12">
-        <div class="w-96">
-          <section>
-            <label for="oldPassword"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
-              Aktuelles Passwort</label>
-            <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
-              <input type="password" name="oldPassword" id="oldPassword" autocomplete="current-password" required
-                formControlName="oldPassword"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
-            </div>
-            <div *ngIf="f['oldPassword'].errors && (f['oldPassword'].dirty || f['oldPassword'].touched)">
-              <div *ngIf="f['oldPassword'].errors['required']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
-                  <div class="text-sm font-medium">
-                    Bitte gib dein aktuelles Passwort ein.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-          <section>
-            <label for="newPassword"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark">
-              Neues Password</label>
-            <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
-              <input type="password" name="newPassword" id="newPassword" autocomplete="new-password" required
-                formControlName="newPassword"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
-            </div>
-
-            <div *ngIf="
-                f['newPassword'].errors &&
-                (f['newPassword'].dirty || f['newPassword'].touched)
-              ">
-              <div *ngIf="f['newPassword'].errors['required']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
-                  <div class="text-sm font-medium">
-                    Bitte gib ein Passwort ein.
-                  </div>
-                </div>
-              </div>
-              <div *ngIf="f['newPassword'].errors['minlength']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
-                  <div class="text-sm font-medium">
-                    Das Passwort muss mindestens 8 Zeichen lang sein.
-                  </div>
-                </div>
-              </div>
-              <div *ngIf="f['newPassword'].errors['maxlength']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
-                  <div class="text-sm font-medium">
-                    Das Passwort darf maximal 30 Zeichen lang sein.
-                  </div>
-                </div>
-              </div>
-              <div *ngIf="f['newPassword'].errors['pattern']">
-                <div class="flex text-error-light dark:text-error-dark" role=" alert">
-                  <div class="text-sm font-medium">
-                    <ul>
-                      <li>
-                        Das Passwort muss mindestens 1 Großbuchstaben enthalten.
-                      </li>
-                      <li>
-                        Das Passwort muss mindestens 1 Kleinbuchstaben
-                        enthalten.
-                      </li>
-                      <li>Das Passwort muss mindestens 1 Zahl enthalten.</li>
-                      <li>
-                        Das Passwort muss mindestens 1 Sonderzeichen
-                        (,!"§$%&/()=?[]\&#x007B;} und Leerzeichen) enthalten.
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-          <div class="flex w-full place-content-end pt-7">
-            <party-time-primary-button (clicked)="onSubmit()" [disabled]="!changeForm.valid" type="button"
-              name="Ändern"></party-time-primary-button>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
-</section>
+asdasd
