--- a/libs/register/src/lib/register/register.component.html
+++ b/libs/register/src/lib/register/register.component.html
@@ -1,141 +1,48 @@
 <!-- implements F010 -->
-<section *ngIf="registerState$ | async as registerState">
-  <ng-template #registerdone>
-    <div *ngIf="registerState.loading">
-      <div class="grid h-screen place-items-center">
-        <div role="status">
-          <party-time-loading-circle></party-time-loading-circle>
-        </div>
-        <p
-          class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl"
-        >
-          Profil wird erstellt
-        </p>
-      </div>
-    </div>
-    <ng-template #error>
-      <div class="grid h-screen place-items-center">
-        <div
-          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
-        >
-          <p class="">Hey!</p>
-          <p>Dein Account konnte leider nicht erstellt werden</p>
-          <p>Status: {{ registerState.error?.status }}</p>
-          <div>
-            Fehler:
-            <p class="text-error-light dark:text-error-dark">
-              {{ registerState.error?.message }}
-            </p>
-            <li
-              class="text-error-light dark:text-error-dark"
-              *ngFor="let error of registerState.error?.additionalInformation"
-            >
-              {{ error['name'] }} {{ error['message'] }}
-            </li>
-          </div>
-        </div>
-      </div>
-    </ng-template>
-    <div *ngIf="registerState.registerd; else error">
-      <div class="grid h-screen place-items-center">
-        <div
-          class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
-        >
-          <p
-            class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark"
-          >
-            Hey {{ registerState.accountDTO?.name }}!
-          </p>
-          <p>Dein Account wurde erstellt</p>
-          <p>
-            Bitte bestätige deine E-Mail Adresse
-            {{ registerState.accountDTO?.email }}
-          </p>
-        </div>
-      </div>
-    </div>
-  </ng-template>
-  <div
-    *ngIf="
-      !registerState.registerd &&
-        !registerState.loading &&
-        !registerState.error;
-      else registerdone
-    "
-  >
-    <h1
-      class="m-10 h-full text-3xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-5xl lg:pt-5 lg:text-6xl"
-    >
-      Profil erstellen
-    </h1>
-    <form class="" [formGroup]="registerForm">
+<ng-container *ngIf="vm$ | async as vm">
+  <div *ngIf="!vm.isRegisterd; else registered">
+    <party-time-main-header title="Account erstellen" />
+    <form (ngSubmit)="(onSubmit)" [formGroup]="registerForm">
       <div class="flex justify-center pl-12 pr-12 pt-12">
         <div class="w-96">
           <section>
-            <label
-              for="benutzername"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
-            >
-              Benutzername</label
-            >
+            <party-time-primary-label id="username" label="Benutzername" />
             <div
               class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
             >
               <input
-                type="text"
-                name="name"
-                minlength="4"
-                id="name"
-                autocomplete="name"
+                name="username"
+                id="username"
+                autocomplete="username"
                 required
                 formControlName="name"
                 class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-                placeholder="z. B. Manfred"
-                [value]="accountRegisterDTO.name"
+                placeholder="z. B. PartyMani"
               />
             </div>
             <div
               *ngIf="f['name'].errors && (f['name'].dirty || f['name'].touched)"
             >
               <div *ngIf="f['name'].errors['required']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    Bitte gib einen Benutzernamen ein.
-                  </div>
-                </div>
+                <party-time-primary-error
+                  error="Bitte gib einen Benutzernamen ein."
+                />
               </div>
               <div *ngIf="f['name'].errors['minlength']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    Der Benutzername muss mindestens 5 Zeichen lang sein.
-                  </div>
-                </div>
+                <party-time-primary-error
+                  error="Der Benutzername muss mindestens 5 Zeichen lang sein."
+                />
               </div>
               <div *ngIf="f['name'].errors['maxlength']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    Der Benutzername darf maximal 30 Zeichen lang sein.
-                  </div>
-                </div>
+                <party-time-primary-error
+                  error="Der Benutzername darf maximal 30 Zeichen lang sein."
+                />
               </div>
             </div>
           </section>
+
           <section>
-            <label
-              for=" email"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
-            >
-              E-Mail</label
-            >
+            <party-time-primary-label id="email" label="E-Mail" />
             <div
               class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
             >
@@ -156,38 +63,20 @@
               "
             >
               <div *ngIf="f['email'].errors['required']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    Bitte gib deine E-Mail Adresse ein damit wir verifizieren
-                    können dass du eine echte Person bist und du dein Passwort
-                    zurücksetzen kannst.
-                  </div>
-                </div>
+                <party-time-primary-error
+                  error="Bitte gib deine E-Mail Adresse ein damit wir verifizieren können dass du eine echte Person bist und du dein Passwort zurücksetzen kannst."
+                />
               </div>
               <div *ngIf="f['email'].errors['email']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    Bitte gib eine Valide E-Mail Adresse ein damit wir
-                    verifizieren können dass du eine echte Person bist. Es wird
-                    eine Verifizierung an diese Adresse gesendet.
-                  </div>
-                </div>
+                <party-time-primary-error
+                  error="Bitte gib eine Valide E-Mail Adresse ein damit wir verifizieren können dass du eine echte Person bist. Es wird eine Verifizierung an diese Adresse gesendet."
+                />
               </div>
             </div>
           </section>
+
           <section>
-            <label
-              for="password"
-              class="mt-5 block text-sm font-medium leading-6 text-on-primary-container-light dark:text-on-primary-container-dark"
-            >
-              Password</label
-            >
+            <party-time-primary-label id="password" label="Passwort" />
             <div
               class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
             >
@@ -195,13 +84,12 @@
                 type="password"
                 name="password"
                 id="password"
-                autocomplete="new-password"
+                autocomplete=" new-password"
                 required
                 formControlName="password"
                 class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
               />
             </div>
-
             <div
               *ngIf="
                 f['password'].errors &&
@@ -209,70 +97,68 @@
               "
             >
               <div *ngIf="f['password'].errors['required']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    Bitte gib ein Passwort ein.
-                  </div>
-                </div>
+                <party-time-primary-error error="Bitte gib ein Passwort ein." />
               </div>
               <div *ngIf="f['password'].errors['minlength']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    Das Passwort muss mindestens 8 Zeichen lang sein.
-                  </div>
-                </div>
+                <party-time-primary-error
+                  error="Das Passwort muss mindestens 8 Zeichen lang sein."
+                />
               </div>
               <div *ngIf="f['password'].errors['maxlength']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    Das Passwort darf maximal 30 Zeichen lang sein.
-                  </div>
-                </div>
+                <party-time-primary-error
+                  error="Das Passwort darf maximal 30 Zeichen lang sein."
+                />
               </div>
               <div *ngIf="f['password'].errors['pattern']">
-                <div
-                  class="flex text-error-light dark:text-error-dark"
-                  role=" alert"
-                >
-                  <div class="text-sm font-medium">
-                    <ul>
-                      <li>
-                        Das Passwort muss mindestens 1 Großbuchstaben enthalten.
-                      </li>
-                      <li>
-                        Das Passwort muss mindestens 1 Kleinbuchstaben
-                        enthalten.
-                      </li>
-                      <li>Das Passwort muss mindestens 1 Zahl enthalten.</li>
-                      <li>
-                        Das Passwort muss mindestens 1 Sonderzeichen
-                        (,!"§$%&/()=?[]\&#x007B;} und Leerzeichen) enthalten.
-                      </li>
-                    </ul>
-                  </div>
-                </div>
+                <party-time-primary-error
+                  error='Das Passwort muss mindestens 1 Großbuchstaben enthalten. Das Passwort muss mindestens 1 Kleinbuchstaben enthalten. Das Passwort muss mindestens 1 Zahl enthalten. Das Passwort muss mindestens 1 Sonderzeichen (,!"§$%&/()=?[]\&#x007B;} und Leerzeichen) enthalten.'
+                />
               </div>
             </div>
           </section>
+
           <div class="flex w-full place-content-end pt-7">
+            <div
+              class="inline-block w-full justify-center pt-2 text-left align-bottom"
+            >
+              <party-time-primary-error [error]="vm.error?.error?.message" />
+            </div>
+
             <party-time-primary-button
+              lodingMessage="Regestriere"
+              [isLoading]="vm.isLoading"
               (clicked)="onSubmit()"
-              [disabled]="!registerForm.valid"
+              [disabled]="!registerForm.valid || vm.isLoading"
               type="button"
-              name="Regestieren"
-            ></party-time-primary-button>
+              name="Regestrieren"
+            />
           </div>
         </div>
       </div>
     </form>
   </div>
-</section>
+
+  <ng-template #registered>
+    <party-time-main-header title="Account erstellt" />
+    <div class="flex justify-center pl-12 pr-12 pt-12">
+      <div
+        class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
+      >
+        <p
+          class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark"
+        >
+          Hey {{ vm.accountDTO?.name }}!
+        </p>
+        <p>
+          Bitte bestätige deine E-Mail Adresse
+          {{ vm.accountDTO?.email }}
+        </p>
+      </div>
+    </div>
+    <party-time-primary-button
+      class="flex justify-center pt-12"
+      routerLink="/auth/verify"
+      name="Zur Verifikation"
+    />
+  </ng-template>
+</ng-container>
