fix for cypress tests

--- a/libs/auth/src/lib/login/login.component.html
+++ b/libs/auth/src/lib/login/login.component.html
@@ -6,7 +6,7 @@
       <div class="flex justify-center pl-12 pr-12 pt-12">
         <div class="w-96">
           <section>
-            <party-time-primary-label id="email" label="E-Mail" />
+            <party-time-primary-label label="E-Mail" />
             <div
               class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
               <input type="email" name="email" id="email" autocomplete="email" required formControlName="email"
@@ -21,7 +21,7 @@
             </div>
           </section>
           <section>
-            <party-time-primary-label id="password" label="Passwort"></party-time-primary-label>
+            <party-time-primary-label label="Passwort"></party-time-primary-label>
             <div
               class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
               <input type="password" name="password" id="password" autocomplete="new-password" required
