implement participants logic

--- a/libs/event/src/lib/overview/overview.component.html
+++ b/libs/event/src/lib/overview/overview.component.html
@@ -7,6 +7,7 @@
         <party-time-event-selector
           [event]="event"
           (selectEvent)="navigateToEdit(event.id)"
+          (selectParticipants)="navigateToParticipants(event.id)"
         ></party-time-event-selector>
       </ul>
     </div>
